--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -17,6 +17,7 @@
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
+        app:cardBackgroundColor="#FFFFFF"
         android:background="@drawable/custom_edittext">
 
         <LinearLayout
@@ -43,10 +44,11 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/custom_edittext"
-                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:drawableLeft="@drawable/user3"
                 android:drawablePadding="8dp"
-                android:hint="Email"
+                android:hint="Email.."
                 android:padding="8dp"
+                android:textColorHint="#4c4c4c"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
 
@@ -56,10 +58,11 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_edittext"
-                android:drawableLeft="@drawable/ic_baseline_lock_24"
+                android:drawableLeft="@drawable/lock2"
                 android:drawablePadding="8dp"
-                android:hint="Password"
+                android:hint="Password.."
                 android:inputType="textPassword"
+                android:textColorHint="#4c4c4c"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
@@ -70,9 +73,10 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_edittext"
-                android:drawableLeft="@drawable/ic_baseline_lock_24"
+                android:drawableLeft="@drawable/lock2"
                 android:drawablePadding="8dp"
                 android:hint="Repeat Password"
+                android:textColorHint="#4c4c4c"
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:textColor="@color/black"
